[package]
name = "rook"
version = "0.1.0"
edition = "2021"
description = "tiny rust github webhook"

[dependencies]
log = { version = "0.4" }
hmac = { version = "0.11.0" }
sha2 = { version = "0.9.8" }
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread", "signal"] }
