[package]
name = "rook"
version = "0.2.0"
edition = "2021"
description = "tiny rust github webhook server"

[dependencies]
fork = { version = "0.1" }
futures = { version = "0.3" }
hmac = { version = "0.12" }
hyper = { version = "0.14", features = ["http1", "server", "tcp", "stream"] }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread", "signal"] }
toml = { version = "0.5" }
